--- a/ws/webapp/static/teachers.html
+++ b/ws/webapp/static/teachers.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <meta charset="utf-8" <title>Teachers</title>
+    <meta charset="utf-8" /> 
+    <title>Teachers</title>
 </head>
 
 <body>
