--- a/ws/wasm-client/www/index.html
+++ b/ws/wasm-client/www/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Hello wasm-pack!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -45,7 +44,7 @@
                 <div class="card border-info mb-3">
                     <div class="card-header">添加课程</div>
                     <div class="card-body">
-                        <form class="row g-3 needs-validation" id="form">
+                        <form action="" method="post" class="row g-3 needs-validation" id="form">
                             <div class="mb-3">
                                 <label for="name" class="form-label">课程名称</label>
                                 <input type="name" class="form-control" id="name" required placeholder="课程名称" />
@@ -64,7 +63,6 @@
             </div>
         </div>
     </div>
-
+    <script src="./bootstrap.js"></script>
 </body>
-
 </html>
